feat: 手動記録機能とハンバーガーメニュー化を実装
- メイン画面と設定画面を分離し、ハンバーガーメニューで遷移
- 「今すぐ記録」ボタンで任意のページを即座に記録可能に
- 手動記録では重複URLチェックをスキップし、同じページを複数回記録可能
- メイン画面に現在のタブ情報（タイトル、URL、favicon）を表示
- Content Script経由でページコンテンツを取得するGET_CONTENTメッセージを追加
- Background WorkerにMANUAL_RECORDハンドラを追加
- ドキュメントを更新：README.md、SETUP_GUIDE.md、CHANGELOG.md
- アイコンファイルに関するガイド(ICONS.md)を追加
- manifest.jsonにアイコン設定を追加

実装プラン: plan/pbi-001-manual-recording.md

--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,11 @@
   "name": "Obsidian Smart History",
   "version": "1.0.0",
   "description": "Smartly backup closed tabs to Obsidian with AI summaries and context linking.",
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "permissions": [
     "tabs",
     "storage",
