chore: save state before refactoring (pre-refactor-v2.1.0)

--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,8 @@
     "storage",
     "scripting",
     "identity",
-    "notifications"
+    "notifications",
+    "offscreen"
   ],
   "host_permissions": [
     "http://127.0.0.1:27123/*",
