--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
   "manifest_version": 3,
   "name": "Obsidian Smart History",
-  "version": "2.3.0",
-  "description": "Smartly backup closed tabs to Obsidian with AI summaries and context linking.",
+  "version": "2.4.0",
+  "description": "__MSG_extensionDescription__",
+  "default_locale": "en",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
