--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": 3,
   "name": "Obsidian Smart History",
-  "version": "2.4.1",
+  "version": "2.4.3",
   "description": "__MSG_extensionDescription__",
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'none'; connect-src https://127.0.0.1:27123 http://127.0.0.1:27124 http://localhost:27123 http://localhost:27124 https://generativelanguage.googleapis.com https://api.groq.com https://api.openai.com https://*/* http://*/*; style-src 'self'; img-src 'self' https: http: data:; default-src 'none';"
+    "extension_pages": "script-src 'self'; object-src 'none'; connect-src https://127.0.0.1:27123 http://127.0.0.1:27124 https://127.0.0.1:27124 http://127.0.0.1:27123 https://localhost:27123 http://localhost:27124 https://localhost:27124 http://localhost:27123 https://generativelanguage.googleapis.com https://api.groq.com https://api.openai.com https: http:; style-src 'self'; img-src 'self' https: http: data:; default-src 'none';"
   },
   "default_locale": "en",
   "icons": {
@@ -18,13 +18,18 @@
     "scripting",
     "identity",
     "notifications",
-    "offscreen"
+    "offscreen",
+    "favicon"
   ],
   "host_permissions": [
     "http://127.0.0.1:27123/*",
+    "https://127.0.0.1:27123/*",
     "http://localhost:27123/*",
+    "https://localhost:27123/*",
     "http://127.0.0.1:27124/*",
+    "https://127.0.0.1:27124/*",
     "http://localhost:27124/*",
+    "https://localhost:27124/*",
     "https://generativelanguage.googleapis.com/*",
     "https://*/*",
     "http://*/*"
