Let me analyze the git diff to understand the changes and generate an appropriate conventional commit message.
Looking at the diff:

1. **CHANGELOG.md**: Updates version date to 2026-02-15 and adds Performance section documenting PII replacement optimization and settings data consistency improvements, plus Tests section.

2. **manifest.json**: Adds `"unlimitedStorage"` permission.

3. **src/background/__tests__/integration-robustness.test.js**: Updates test to handle new settings object structure with migration flags and junk data within settings object.

4. **src/utils/__tests__/piiSanitizer-optimization.test.js**: New file with comprehensive tests for PII replacement optimization (array join method), including functionality tests, performance tests, timeout tests, and edge cases.

5. **src/utils/__tests__/storage-locking.test.js**: New file with tests for optimistic locking in saveSettings functionality, including concurrent save tests, migration tests, and conflict statistics.

6. **src/utils/__tests__/storage.test.js**: Updates tests to work with new single settings object structure instead of individual keys.

7. **src/utils/piiSanitizer.js**: Replaces string concatenation with array join method for better memory efficiency during PII replacement. Exports MAX_INPUT_SIZE constant.

8. **src/utils/storage.js**: Major refactoring:
   - Introduces `migrateToSingleSettingsObject()` function to migrate from individual keys to a single settings object
   - Adds optimistic locking via `withOptimisticLock` for concurrent save prevention
   - Updates `getSettings()` to handle new single settings object structure
   - Updates `saveSettings()` to use optimistic locking

The changes consist of:
- **Performance improvement**: PII replacement using array join instead of string concatenation
- **Storage refactoring**: Moving from individual keys to single settings object with optimistic locking
- **Migration support**: Function to migrate old storage format to new format
- **T

--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,8 @@
     "identity",
     "notifications",
     "offscreen",
-    "favicon"
+    "favicon",
+    "unlimitedStorage"
   ],
   "host_permissions": [
     "http://127.0.0.1:27123/*",
