Looking at the staged changes, this is a substantial set of changes that includes:
1. **E2E Testing**: Added Playwright for end-to-end testing with configuration
2. **Documentation**: Added multiple plan documents for checking team review and release preparation
3. **Test Improvements**: Added several new test files (aiProvider.test.ts, fieldValidation.test.ts, promptSanitizer.test.ts, storage-buildAllowedUrls.test.ts)
4. **Bug Fixes**: Fixed test failures in obsidianClient.test.ts and ublockParser.test.js
5. **Security**: Improved prompt injection detection in GeminiProvider and OpenAIProvider
6. **Build/Config**: Added Playwright dependency, updated package.json, gitignore
7. **Version Updates**: Updated manifest.json and package.json version to 3.9.1

The most significant changes appear to be:
1. Adding E2E testing infrastructure with Playwright
2. Improving prompt injection handling with re-evaluation
3. Fixing test failures
4. Documentation updates for checking team review

Looking at the git history, recent commits show:
- security: narrow host_permissions
- docs: update CHANGELOG
- feat: display processing time (multiple commits)

The current staged changes build on top of these with infrastructure improvements, testing, and security enhancements.

Primary type: This is primarily a **test** and **build** change, with some **fix** and **security** components.

Looking more carefully:
- E2E testing with Playwright → **test** or **build**
- New test files → **test**
- Prompt injection improvements → **security** or **fix**
- Test fixes → **fix**
- Documentation → **docs**

The most impactful change is the addition of Playwright E2E testing infrastructure, which is a major testing improvement. This should be the primary focus.

Scope: Could be `e2e`, `testing`, or `test`. Let's use `test`.

Description: "add Playwright E2E testing and improve prompt injection detection"

Let me craft a commit message that captures the most significant changes.</think>feat(test): 

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,26 @@ tmp/
 
 node_modules/
 coverage/
+test-results/
+playwright-report/
+playwright/.cache/
 
 docs/blog-*
 
 
 .worktrees/
 .DS_Store
+
+.env
+.idea/
+.vscode/
+*.swp
+*.swo
+*.swn
+
+*.local
+*.local.md
+
+# Local override files
+*.local
+.*
