--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "obsidian-smart-history",
-  "version": "3.0.0",
+  "version": "3.9.1",
   "description": "Smartly backup closed tabs to Obsidian with AI summaries and context linking.",
   "type": "module",
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:headed": "playwright test --headed",
     "type-check": "tsc --noEmit",
     "type-check:watch": "tsc --noEmit --watch",
     "lint": "tsc --noEmit",
@@ -31,6 +35,7 @@
     "@babel/preset-typescript": "^7.28.5",
     "@jest/globals": "^29.7.0",
     "@peculiar/webcrypto": "^1.5.0",
+    "@playwright/test": "^1.58.2",
     "@types/chrome": "^0.1.36",
     "@types/jest": "^30.0.0",
     "@types/node": "^25.2.3",
