--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "validate": "npm run type-check && npm test",
     "clean": "rm -rf dist",
     "prebuild": "npm run clean",
-    "build": "tsc && cp -r manifest.json _locales icons dist/ && cp src/popup/popup.html dist/popup/ && cp src/popup/styles.css dist/popup/ && node -e \"const fs=require('fs'); const file='dist/content/loader.js'; let content=fs.readFileSync(file,'utf8'); content=content.replace(/export \\{\\};?\\s*$/m,''); fs.writeFileSync(file,content);\"",
+    "build": "tsc && cp -r manifest.json _locales icons dist/ && cp src/popup/popup.html dist/popup/ && cp src/popup/styles.css dist/popup/ && mkdir -p dist/dashboard && cp src/dashboard/dashboard.html dist/dashboard/ && cp src/dashboard/dashboard.css dist/dashboard/ && node -e \"const fs=require('fs'); const file='dist/content/loader.js'; let content=fs.readFileSync(file,'utf8'); content=content.replace(/export \\{\\};?\\s*$/m,''); fs.writeFileSync(file,content);\"",
     "build:watch": "tsc --watch"
   },
   "keywords": [
