--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": 3,
   "name": "Obsidian Smart History",
-  "version": "3.9.7",
+  "version": "3.9.8",
   "description": "__MSG_extensionDescription__",
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'none'; connect-src 'self' https://api.openai.com https://*.openai.com https://api.anthropic.com https://api.groq.com https://api-inference.huggingface.co https://openrouter.ai https://api.openrouter.ai https://mistral.ai https://deepinfra.com https://cerebras.ai https://generativelanguage.googleapis.com https://ai-gateway.helicone.ai https://api.ai.sakura.ad.jp https://raw.githubusercontent.com https://gitlab.com https://easylist.to https://pgl.yoyo.org https://nsfw.oisd.nl http://localhost:27123 https://localhost:27123 http://localhost:27124 https://localhost:27124 http://localhost:11434 https://localhost:11434 http://127.0.0.1:27123 https://127.0.0.1:27123 http://127.0.0.1:27124 https://127.0.0.1:27124 http://127.0.0.1:11434 https://127.0.0.1:11434; style-src 'self'; img-src 'self' chrome-extension: data:; default-src 'none';"
+    "extension_pages": "script-src 'self'; object-src 'none'; connect-src 'self' https://generativelanguage.googleapis.com https://api.groq.com https://api.openai.com https://*.openai.com https://api.anthropic.com https://api-inference.huggingface.co https://openrouter.ai https://api.openrouter.ai https://mistral.ai https://deepinfra.com https://cerebras.ai https://ai-gateway.helicone.ai https://api.publicai.co https://api.venice.ai https://api.scaleway.ai https://api.synthetic.new https://api.stima.tech https://nano-gpt.com https://api.poe.com https://llm.chutes.ai https://api.abliteration.ai https://api.llamagate.dev https://api.gmi-serving.com https://api.sarvam.ai https://deepseek.com https://xiaomimimo.com https://nebius.com https://sambanova.ai https://nscale.com https://featherless.ai https://galadriel.com https://perplexity.ai https://recraft.ai https://jina.ai https://voyageai.com https://volcengine.com https://z.ai https://wandb.ai https://api.ai.sakura.ad.jp https://raw.githubusercontent.com https://gitlab.com https://easylist.to https://pgl.yoyo.org https://nsfw.oisd.nl http://localhost:27123 https://localhost:27123 http://localhost:27124 https://localhost:27124 http://localhost:11434 https://localhost:11434 http://127.0.0.1:27123 https://127.0.0.1:27123 http://127.0.0.1:27124 https://127.0.0.1:27124 http://127.0.0.1:11434 https://127.0.0.1:11434; style-src 'self'; img-src 'self' chrome-extension: data:; default-src 'none';"
   },
   "default_locale": "en",
   "icons": {
@@ -48,12 +48,39 @@
     "https://mistral.ai/*",
     "https://deepinfra.com/*",
     "https://cerebras.ai/*",
+    "https://ai-gateway.helicone.ai/*",
+    "https://api.publicai.co/*",
+    "https://api.venice.ai/*",
+    "https://api.scaleway.ai/*",
+    "https://api.synthetic.new/*",
+    "https://api.stima.tech/*",
+    "https://nano-gpt.com/*",
+    "https://api.poe.com/*",
+    "https://llm.chutes.ai/*",
+    "https://api.abliteration.ai/*",
+    "https://api.llamagate.dev/*",
+    "https://api.gmi-serving.com/*",
+    "https://api.sarvam.ai/*",
+    "https://deepseek.com/*",
+    "https://xiaomimimo.com/*",
+    "https://nebius.com/*",
+    "https://sambanova.ai/*",
+    "https://nscale.com/*",
+    "https://featherless.ai/*",
+    "https://galadriel.com/*",
+    "https://perplexity.ai/*",
+    "https://recraft.ai/*",
+    "https://jina.ai/*",
+    "https://voyageai.com/*",
+    "https://volcengine.com/*",
+    "https://z.ai/*",
+    "https://wandb.ai/*",
+    "https://api.ai.sakura.ad.jp/*",
     "https://raw.githubusercontent.com/*",
     "https://gitlab.com/*",
     "https://easylist.to/*",
     "https://pgl.yoyo.org/*",
-    "https://nsfw.oisd.nl/*",
-    "https://api.ai.sakura.ad.jp/*"
+    "https://nsfw.oisd.nl/*"
   ],
   "background": {
     "service_worker": "background/service-worker.js",
